...
        disabled={isLoading}
      >
        {t("onboarding.continue")}
      </Button>
      <Button
        secondary
        testID="skip-button"
        isLoading={isLoading}
        onPress={onPressSkip}
      >
        {t("onboarding.doThisLaterButtonText")}
      </Button>
    </StyledFooterButtonContainer>
...
          />
        }
      >
        <Text secondary md>
          {t("recoveryPhraseScreen.warning")}
        </Text>
        <RecoveryPhraseContainer testID="recovery-phrase-container">
          <RecoveryPhraseText primary md>
            {localMnemonicPhrase}
          </RecoveryPhraseText>
        </RecoveryPhraseContainer>
        <Button
          secondary
...
