...
}) => (
  <StyledFooterButtonContainer>
    {hasClipboardButton && (
      <Button
        secondary
        isFullWidth
        testID="clipboard-button"
        onPress={onPressClipboardButton as () => void}
        icon={<Icon.Clipboard size={16} color={PALETTE.dark.gray["09"]} />}
      >
        {t("onboarding.pasteFromClipboard")}
      </Button>
    )}
    <Button
      tertiary
      testID="default-action-button"
      isLoading={isLoading}
      onPress={onPressDefaultActionButton}
      disabled={isDefaultActionButtonDisabled}
      icon={defaultActionButtonIcon}
      iconPosition={defaultActionButtonIconPosition}
    >
...
