...
        secureTextEntry={!localShowPassword}
        placeholder={t("choosePasswordScreen.passwordInputPlaceholder")}
        fieldSize="lg"
        note={t("passwordInput.passwordNote")}
        error={error}
        value={localPassword}
        testID="password-input"
        onChangeText={(text) => {
          setLocalPassword(text);
          if (text.length > PASSWORD_MAX_LENGTH) {
            setError(t("choosePasswordScreen.passwordTooLong"));
          } else {
            setError(null);
...
