...
        secureTextEntry={!showPassword}
        placeholder={t("confirmPasswordScreen.passwordInputPlaceholder")}
        fieldSize="lg"
        note={t("passwordInput.passwordNote")}
        error={error}
        value={confirmPasswordValue}
        testID="confirm-password-input"
        onChangeText={(text) => {
          handlePasswordChange(text);
          if (text.length > PASSWORD_MAX_LENGTH) {
            setError(t("choosePasswordScreen.passwordTooLong"));
          } else {
            setError(null);
...
